<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_1">

    <TextView
        android:id="@+id/login_goback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="@dimen/font_2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/title_h2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_user"
        android:textSize="@dimen/title_h3"
        />
    <EditText
        android:id="@+id/login_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:hint="@string/hint_user"
        android:inputType="text"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_pass"
        android:textSize="@dimen/title_h3"
        />
    <EditText
        android:id="@+id/login_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/title_h3"
        />
    <TextView
        android:id="@+id/login_toregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:layout_gravity="center"
        />
</LinearLayout>